--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
-<!-- <a13-header></a13-header> -->
-
 <mat-sidenav-container class="sidenav-container">
-	<mat-sidenav #leftSidenav mode="side" opened>
+
+	<!-- Sidebar -->
+	<mat-sidenav class="sidenav border0" #leftSidenav mode="side" opened>
 		<a13-side-menu></a13-side-menu>
 	</mat-sidenav>
+
+	<!-- Content -->
 	<mat-sidenav-content [@onMainContentChange]="onSideNavChange ? 'open': 'close'">
-		<div class="main_content">
-			<div style="padding: 20px">
-				Your content
-			</div>
+		<div class="main-content">
+			<a13-header></a13-header>
+			Contenido
 		</div>
 	</mat-sidenav-content>
 </mat-sidenav-container>
