--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -11,7 +11,8 @@
 
     <!-- Menu -->
     <mat-nav-list>
-      <a mat-list-item *ngFor="let item of menuItems">
+      <a class="nav-list-item" mat-list-item *ngFor="let item of menuItems" [routerLink]="[ '/' + item?.url ]"
+        routerLinkActive="active {{item?.theme}}">
         <mat-icon [ngClass]="{'pH': linkText}">{{ item?.icon }}</mat-icon>
         <span [@animateText]="linkText ? 'show' : 'hide'">{{ item?.name }} </span>
       </a>
@@ -23,8 +24,7 @@
   <!-- Arrow -->
   <div fxLayout="row" fxLayoutAlign="end center" class="pt0 pb0 prH plH">
     <button mat-icon-button (click)="onSinenavToggle()">
-      <mat-icon *ngIf="sideNavState">arrow_left</mat-icon>
-      <mat-icon *ngIf="!sideNavState">arrow_right</mat-icon>
+      <mat-icon>{{'arrow_' + (sideNavState ? 'left' : 'right')}}</mat-icon>
     </button>
   </div>
 </div>
