fix new path to css-utilities

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,4 @@
 @import "scss/typography";
 @import "scss/mixins";
 @import "scss/main";
-@import "~css-utilities/style.min.css";
+@import "~css-utilities/dist/style.min.css";
