Add link on header title

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,3 +1,5 @@
-<mat-toolbar class="mat-elevation-z6 header" color="primary" role="heading" aria-label="heading">
-  <h1 class="mat-h1">{{title}}</h1>
+<mat-toolbar class="header" role="heading" aria-label="heading">
+  <h1 class="mat-h1">
+    <a [routerLink]="[ '/aula' ]">{{title}}</a>
+  </h1>
 </mat-toolbar>
