--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -10,12 +10,13 @@
     </div>
 
     <!-- Menu -->
-    <mat-nav-list>
-      <a class="nav-list-item" mat-list-item *ngFor="let item of menuItems" [routerLink]="[ '/' + item?.url ]"
+    <mat-nav-list class="m0 p0" *ngFor="let menu of menuItems; index as i">
+      <a class="nav-list-item" mat-list-item *ngFor="let item of menu" [routerLink]="[ '/' + item?.url ]"
         routerLinkActive="active {{item?.theme}}">
-        <mat-icon [ngClass]="{'pH': linkText}">{{ item?.icon }}</mat-icon>
+        <mat-icon class="blue" [ngClass]="{'pH': linkText}">{{ item?.icon }}</mat-icon>
         <span [@animateText]="linkText ? 'show' : 'hide'">{{ item?.name }} </span>
       </a>
+      <mat-divider *ngIf="i !== 0 && menu.length !== 0"></mat-divider>
     </mat-nav-list>
   </div>
 
