--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -1,8 +1,8 @@
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Varela+Round|Montserrat|Material+Icons");
+@import url("https://fonts.googleapis.com/css?family=Varela+Round|Material+Icons");
 
 // Typography
-$primary-typography: mat-typography-config($font-family: '"Varela Round", "Montserrat", "Helvetica Neue", sans-serif');
+$primary-typography: mat-typography-config($font-family: '"Varela Round", "Helvetica Neue", sans-serif');
 
 @include angular-material-typography($primary-typography);
 
@@ -11,5 +11,33 @@ $primary-typography: mat-typography-config($font-family: '"Varela Round", "Monts
 }
 
 @mixin secondary-font {
-  font-family: "Montserrat" !important;
+  font-family: "Varela Round" !important;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.mat-display-4,
+.mat-display-3,
+.mat-display-2,
+.mat-display-1,
+.mat-h1,
+.mat-headline,
+.mat-h2,
+.mat-title,
+.mat-h3,
+.mat-subheading-2,
+.mat-h4,
+.mat-subheading-1,
+.mat-body,
+.mat-body-1,
+.mat-body-strong,
+.mat-body-2,
+.mat-small,
+.mat-caption {
+  @include secondary-font;
+  font-weight: bold !important;
 }
