change accent theme

--- a/src/scss/theming.scss
+++ b/src/scss/theming.scss
@@ -4,7 +4,7 @@
 
 // Palettes
 $my-app-primary: mat-palette($mat-gray, 900);
-$my-app-accent: mat-palette($mat-yellow, 600, 900);
+$my-app-accent: mat-palette($mat-orange, 600, 900);
 $my-app-warn: mat-palette($mat-red, 700, 900, A100);
 $my-theme-info: mat-palette($mat-blue);
 $my-theme-success: mat-palette($mat-green);
