Change primary colors

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,8 +1,8 @@
 :root {
   // Colors
-  --primary-color: #4a99ab;
-  --accent-color: #19343a;
-  --warn-color: #d56133;
+  --primary-color: #05cfab;
+  --accent-color: #2c365b;
+  --warn-color: #fc6044;
 
   // Fonts
   --font-main-color: #222;
@@ -10,7 +10,7 @@
   --font-header-color: #333;
 
   // Backgrounds
-  --bg-main-color: #f0f1f6;
+  --bg-main-color: #f0f6f5;
   --bg-hover-color: #0000000a;
 
   // Borders
