--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -1,11 +1,50 @@
 // Google fonts
-@import url("https://fonts.googleapis.com/css?family=Varela+Round|Material+Icons");
+
+/* varela-round-regular - latin */
+@font-face {
+  font-family: 'Varela Round';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Varela Round Regular'), local('VarelaRound-Regular'),
+    url('./fonts/varela-round-v11-latin-regular.woff2') format('woff2'),
+    /* Chrome 26+, Opera 23+, Firefox 39+ */
+    url('./fonts/varela-round-v11-latin-regular.woff') format('woff');
+  /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+
+/* material-icon */
+@font-face {
+  font-family: 'Material Icons';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Material Icons'),
+    local('MaterialIcons-Regular'),
+    url('./fonts/MaterialIcons-Regular.woff2') format('woff2'),
+    url('./fonts/MaterialIcons-Regular.woff') format('woff')
+}
+
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 1;
+  letter-spacing: normal;
+  text-transform: none;
+  display: inline-block;
+  white-space: nowrap;
+  word-wrap: normal;
+  direction: ltr;
+  -webkit-font-feature-settings: 'liga';
+  -webkit-font-smoothing: antialiased;
+}
 
 // Typography
 $primary-typography: mat-typography-config($font-family: '"Varela Round", "Helvetica Neue", sans-serif');
 
 @include angular-material-typography($primary-typography);
-
 
 h1,
 h2,
