Remove arial-label

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header" role="heading" aria-label="heading">
+<mat-toolbar class="header">
   <h1 class="mat-h1">
     <a [routerLink]="[ '/aula' ]">{{title}}</a>
   </h1>
