--- a/src/app/components/student-list/student-list.component.html
+++ b/src/app/components/student-list/student-list.component.html
@@ -3,7 +3,7 @@
 
 <!-- Filter -->
 <mat-form-field>
-  <input matInput [(ngModel)]="search" placeholder="Buscar alumno">
+  <input matInput [(ngModel)]="search" placeholder="Buscar alumno" aria-label="Buscar alumno">
   <mat-icon matSuffix>search</mat-icon>
 </mat-form-field>
 
