--- a/src/scss/typography.scss
+++ b/src/scss/typography.scss
@@ -7,9 +7,9 @@
   font-weight: 400;
   font-display: swap;
   src: local('Varela Round Regular'), local('VarelaRound-Regular'),
-    url('./fonts/varela-round-v11-latin-regular.woff2') format('woff2'),
+    url('/assets/fonts/varela-round-v11-latin-regular.woff2') format('woff2'),
     /* Chrome 26+, Opera 23+, Firefox 39+ */
-    url('./fonts/varela-round-v11-latin-regular.woff') format('woff');
+    url('/assets/fonts/varela-round-v11-latin-regular.woff') format('woff');
   /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
@@ -21,8 +21,8 @@
   font-display: swap;
   src: local('Material Icons'),
     local('MaterialIcons-Regular'),
-    url('./fonts/MaterialIcons-Regular.woff2') format('woff2'),
-    url('./fonts/MaterialIcons-Regular.woff') format('woff')
+    url('/assets/fonts/MaterialIcons-Regular.woff2') format('woff2'),
+    url('/assets/fonts/MaterialIcons-Regular.woff') format('woff')
 }
 
 .material-icons {
