Fixed side-menu collapse icon

--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -25,7 +25,7 @@
   <!-- Arrow -->
   <div fxLayout="row" fxLayoutAlign="end center" class="pt0 pb0 prH plH">
     <button mat-icon-button (click)="onSinenavToggle()" role="button" aria-label="Abrir/Cerrar menú">
-      <mat-icon>{{'arrow_' + (sideNavState ? 'left' : 'right')}}</mat-icon>
+      <mat-icon>{{'keyboard_arrow_' + (sideNavState ? 'left' : 'right')}}</mat-icon>
     </button>
   </div>
 </div>
