Add link color css root variable

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -8,6 +8,7 @@
   --font-main-color: #222;
   --font-light-color: #888;
   --font-header-color: #333;
+  --font-link-color: #2f63ee;
 
   // Backgrounds
   --bg-main-color: #f0f6f5;
