--- a/src/app/components/student-list/student-list.component.scss
+++ b/src/app/components/student-list/student-list.component.scss
@@ -5,3 +5,21 @@
     color: var(--font-light-color);
   }
 }
+
+.row:hover {
+  cursor: pointer;
+}
+
+.active {
+  color: var(--font-link-color);
+}
+
+.user-avatar-image {
+  max-width: 40px;
+  width: 100%;
+}
+
+.arrow-icon {
+  position: relative;
+  top: 2px;
+}
