--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -6,6 +6,10 @@
   z-index: 1000;
   background-color: var(--accent-color);
 
+  .menu-button {
+    color: white;
+  }
+
   h1 a {
     color: white;
     text-decoration: none;
