--- a/src/app/components/side-menu/side-menu.component.html
+++ b/src/app/components/side-menu/side-menu.component.html
@@ -1,4 +1,4 @@
-<div class="sidenav-container" [@onSideNavChange]="sideNavState ? 'open' : 'close'">
+<div class="sidenav-container">
   <div class="side-menu-container" fxLayout="column" fxLayoutGap="10px">
 
     <!-- User -->
@@ -18,14 +18,5 @@
       </a>
       <mat-divider *ngIf="i !== 0 && menu.length !== 0"></mat-divider>
     </mat-nav-list>
-  </div>
-
-  <span class="spacer"></span>
-
-  <!-- Arrow -->
-  <div fxLayout="row" fxLayoutAlign="end center" class="pt0 pb0 prH plH">
-    <button mat-icon-button (click)="onSinenavToggle()" role="button" aria-label="Abrir/Cerrar menú">
-      <mat-icon>{{'keyboard_arrow_' + (sideNavState ? 'left' : 'right')}}</mat-icon>
-    </button>
   </div>
 </div>
