--- a/src/app/components/aula/aula.component.scss
+++ b/src/app/components/aula/aula.component.scss
@@ -1,6 +1,6 @@
 .main-content {
   width: 100%;
-  height: calc(100vh - 64px) !important;
+  height: calc(100vh - var(--header-height)) !important;
   background-color: var(--bg-main-color);
 }
 
