--- a/src/app/components/student/student.component.scss
+++ b/src/app/components/student/student.component.scss
@@ -1,17 +1,20 @@
 mat-card {
-	transition: all .2s;
-	cursor: pointer;
+  transition: all .2s;
+  cursor: pointer;
 
   &:hover {
-		outline: -webkit-focus-ring-color auto 5px;
+    outline: -webkit-focus-ring-color auto 5px;
   }
-}
-
-.row {
-  width: 25%;
 }
 
 .user-avatar-image {
   max-width: 40px;
   width: 100%;
+}
+
+.badge {
+  color: white;
+  padding: 3px 5px;
+  font-size: 12px;
+  border-radius: 3px;
 }
