--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
   position: relative;
   top: 0;
   z-index: 1000;
-  background-color: var(--accent-color);
+  background-color: var(--primary-color);
 
   .menu-button {
     color: white;
