--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,7 +2,7 @@
   // Colors
   --primary-color: #2c365b;
   --accent-color: #11a3da;
-  --warn-color: #fc6044;
+  --warn-color: #ef6a39;
 
   // Fonts
   --font-main-color: #222;
@@ -12,7 +12,8 @@
 
   // Backgrounds
   --bg-main-color: #f0f4f6;
-  --bg-hover-color: #0000000a;
+  --bg-hover-color: #eee;
+  --bg-active-color: #ededed;
 
   // Borders
   --border-color: #d1ddf5;
