--- a/src/scss/theming.scss
+++ b/src/scss/theming.scss
@@ -1,21 +1,27 @@
 @import "~@angular/material/theming";
 
-@include mat-core();
+// Angular Material styles
+@include mat-core;
 
 // Palettes
-$my-app-primary: mat-palette($mat-light-blue, 700);
-$my-app-accent: mat-palette($mat-brown, 500, 900);
-$my-app-warn: mat-palette($mat-red, 700, 900, A100);
-$my-theme-info: mat-palette($mat-blue);
-$my-theme-success: mat-palette($mat-green);
-$my-theme-warning: mat-palette($mat-yellow);
-$my-theme-error: mat-palette($mat-red);
+$primary: mat-palette($mat-blue, 600, 400, 900); // Default, lighter, and darker hue.
+$accent: mat-palette($mat-light-blue, 400, 200, 700);
+$warn: mat-palette($mat-red);
+// $background-color: map_get($mat-blue-grey, 50);
 
-// Themes 
-$my-main-theme: mat-light-theme($my-app-primary, $my-app-accent, $my-app-warn);
+// Theme
+$theme: mat-light-theme($primary, $accent, $warn);
 
-@include angular-material-theme($my-main-theme);
+// Custom background color
+$custom-background-color: var(--bg-main-color);
+$background: map-get($theme, background);
+$background: map_merge($background, (background: $custom-background-color));
+$theme: map_merge($theme, (background: $background));
 
+// Set theme
+@include angular-material-theme($theme);
+
+// Helper color classes
 .bg-primary {
   @include bg-color(var(--primary-color));
 }
