Add ripple to student card

--- a/src/app/components/student/student.component.html
+++ b/src/app/components/student/student.component.html
@@ -1,4 +1,4 @@
-<mat-card class="p1 mtH mbH mat-elevation-z0" [routerLink]="[ '/aula/alumno', student.id ]">
+<mat-card class="p1 mtH mbH mat-elevation-z0" matRipple [routerLink]="[ '/aula/alumno', student.id ]">
   <div fxLayout="row" fxLayoutAlign="space-between center">
 
     <div class="row mrH mlH" fxLayout="row" fxLayoutAlign="start center">
