Starting development of the login

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,3 +1,19 @@
-<p>
-  login works!
-</p>
+<section class="login" fxLayout="row">
+
+  <!-- Left -->
+  <aside class="left-login f4">
+    <h1 class="mat-display-1">{{title}}</h1>
+    <div class="bg-image-login"></div>
+  </aside>
+
+  <!-- Right -->
+  <div class="right-login f8">
+
+    <!-- Actions -->
+    <mat-toolbar class="header" fxLayout="row" fxLayoutAlign="end center">
+      <span class="mat-body light-text mr1">¿Aún no eres usuario?</span>
+      <button mat-stroked-button color="primary">Crear cuenta</button>
+    </mat-toolbar>
+  </div>
+
+</section>
