--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -8,6 +8,7 @@
 // Secondary font
 @mixin secondary-font {
   font-family: "Varela Round" !important;
+  font-weight: normal;
 }
 
 // Material icon size
