--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-@import "scss/variables";
+@import "scss/functions";
 @import "scss/mixins";
+@import "scss/variables";
 @import "scss/theming";
 @import "scss/typography";
 @import "scss/main";
-@import "scss/utilities.scss";
 @import "~css-utilities/dist/style.min.css";
