--- a/src/app/components/aula/aula.component.scss
+++ b/src/app/components/aula/aula.component.scss
@@ -1,8 +1,8 @@
 .main-content {
   width: 100%;
-  height: calc(100vh - var(--header-height)) !important;
+  height: calc(100vh - var(--main-header-size)) !important;
 }
 
 .aula-container {
-  padding: var(--padding-main-size);
+  padding: var(--main-padding-size);
 }
