--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,10 +1,10 @@
 .header {
   width: 100%;
-  height: var(--header-height);
+  height: var(--main-header-size);
   position: relative;
   top: 0;
   z-index: 1000;
-  background-color: var(--primary-color);
+  background-color: var(--main-primary-color);
 
   .menu-button {
     color: white;
