--- a/src/app/components/side-menu/side-menu.component.scss
+++ b/src/app/components/side-menu/side-menu.component.scss
@@ -15,7 +15,7 @@
     max-width: 64px;
     width: 100%;
     padding: .5em;
-    border: 1px solid var(--border-color);
+    border: 1px solid var(--other-border-color);
     border-radius: 50%;
   }
 }
@@ -27,12 +27,12 @@
   border-left-color: transparent;
 
   mat-icon.blue {
-    color: var(--accent-color);
+    color: var(--main-accent-color);
   }
 
   &.active {
     background-color: var(--bg-active-color);
-    border-left-color: var(--warn-color);
+    border-left-color: var(--main-warn-color);
     transition: all .2s;
 
     span {
