--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,14 +1,45 @@
 // Mixins
 
-// Primary font
-@mixin primary-font {
-  font-family: "Varela Round" !important;
+// Set map
+@mixin set-map($map) {
+
+  @each $nameSchema,
+  $schema in $map {
+
+    @each $key,
+    $value in $schema {
+      --#{$nameSchema}-#{$key}: #{$value};
+    }
+  }
 }
 
-// Secondary font
-@mixin secondary-font {
-  font-family: "Varela Round" !important;
-  font-weight: normal;
+// Set utility palette classes
+@mixin set-palette-classes($palettes-map) {
+
+  @each $namePalette,
+  $palette in $palettes-map {
+
+    @each $colorName,
+    $color in $palette {
+      @if $colorName !=contrast {
+        .#{$namePalette}-#{$colorName} {
+          background-color: $color;
+          color: mat-color(map-get($palette, contrast), $colorName);
+        }
+      }
+    }
+  }
+}
+
+// Set utility icon classes
+@mixin set-icon-classes($iconSizes) {
+
+  @each $key,
+  $size in $iconSizes {
+    .mat-icon-#{$key} {
+      @include mat-icon-size($size);
+    }
+  }
 }
 
 // Material icon size
@@ -16,14 +47,4 @@
   font-size: $size;
   height: $size;
   width: $size;
-}
-
-// Background-color
-@mixin bg-color($color) {
-	background-color: $color !important;
-}
-
-// Color
-@mixin color($color) {
-	color: $color !important;
 }
