--- a/src/scss/theming.scss
+++ b/src/scss/theming.scss
@@ -1,47 +1,25 @@
-@import "~@angular/material/theming";
+@import '~@angular/material/theming';
+@include mat-core();
 
-// Angular Material styles
-@include mat-core;
+$theme-colors : (
+  primary         : get-color(main, primary-color),
+  accent          : get-color(main, accent-color),
+  warn            : get-color(main, warn-color)
+);
 
-// Palettes
-$primary: mat-palette($mat-blue, 600, 400, 900); // Default, lighter, and darker hue.
-$accent: mat-palette($mat-light-blue, 400, 200, 700);
-$warn: mat-palette($mat-red);
-// $background-color: map_get($mat-blue-grey, 50);
+$palettes-map: set-custom-palettes($theme-colors);
 
-// Theme
-$theme: mat-light-theme($primary, $accent, $warn);
+// Set Theme
+$my-theme: mat-light-theme(
+  mat-palette(map-get($palettes-map, primary), 800, 500, 900),
+  mat-palette(map-get($palettes-map, accent), 600, 300, 800),
+  mat-palette(map-get($palettes-map, warn), 500, 200, 700)
+);
 
-// Custom background color
-$custom-background-color: var(--bg-main-color);
-$background: map-get($theme, background);
-$background: map_merge($background, (background: $custom-background-color));
-$theme: map_merge($theme, (background: $background));
+// Set background
+$background: map-get($my-theme, background);
+$background: map_merge($background, (background: var(--bg-main-color)));
+$my-theme: map_merge($my-theme, (background: $background));
 
-// Set theme
-@include angular-material-theme($theme);
-
-// Helper color classes
-.bg-primary {
-  @include bg-color(var(--primary-color));
-}
-
-.bg-accent {
-  @include bg-color(var(--accent-color));
-}
-
-.bg-warn {
-  @include bg-color(var(--warn-color));
-}
-
-.color-primary {
-  @include color(var(--primary-color));
-}
-
-.color-accent {
-  @include color(var(--accent-color));
-}
-
-.color-warn {
-  @include color(var(--warn-color));
-}
+@include angular-material-theme($my-theme);
+@include set-palette-classes($palettes-map);
